fix: scrollbar-gutter stable 설정

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,6 +6,7 @@
 @layer base {
   html,
   body {
+    scrollbar-gutter: stable;
     @apply bg-zinc-50 text-zinc-900 dark:bg-zinc-900 dark:text-zinc-50;
   }
 
